# xDD

./: .gitignore  CMakeLists.txt  FindYamlCpp.cmake  MIT-LICENSE.txt  README  README.markdown  README.md
CMakeFind/: FindYamlCpp.cmake
scripts/: msvc11_generate.bat
sources/: CMakeSources.txt
sources/include/xdd/: clean_model.hpp  clean_tree_view.hpp  common.hpp  file.hpp  file_system.hpp  files_model.hpp  filter_views.hpp  filters.hpp  fun.hpp  logger.hpp  mainwindow.hpp  manager.hpp  proto.hpp  scanner.hpp  settings.hpp  settings_window.hpp
sources/res/: all.qrc
sources/src/: clean_model.cpp  clean_tree_view.cpp  common.cpp  file.cpp  file_system.cpp  files_model.cpp  filter_views.cpp  filters.cpp  logger.cpp  main.cpp  mainwindow.cpp  manager.cpp  proto.cpp  scanner.cpp  settings.cpp  settings_window.cpp
sources/ui/: mainwindow.ui  settings.ui  simple_filter.ui
